@@ -1,10 +1,14 @@
+--- 
 abstract: Test for and flip the taint flag without regex matches or C<eval>
 author: "\xC3\x86var Arnfj\xC3\xB6r\xC3\xB0 Bjarmason <avar@cpan.org>"
 build_requires: 
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.65
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Taint-Util
 no_index: 
   directory: 
@@ -14,4 +18,4 @@ requires:
   Exporter: 0
   XSLoader: 0
 tests: t/*.t
-version: 0.03
+version: 0.04
